removed references to cycontext.viz from cycontext notebooks, now reference medspacy.visualization instead

--- a/notebooks/01_spacy_pipeline.ipynb
+++ b/notebooks/01_spacy_pipeline.ipynb
@@ -131,8 +131,8 @@
     {
      "data": {
       "text/plain": [
-       "[('tagger', <spacy.pipeline.pipes.Tagger at 0x10faa3f98>),\n",
-       " ('parser', <spacy.pipeline.pipes.DependencyParser at 0x10fc417c8>)]"
+       "[('tagger', <spacy.pipeline.pipes.Tagger at 0x7f9761a01ad0>),\n",
+       " ('parser', <spacy.pipeline.pipes.DependencyParser at 0x7f975fe54830>)]"
       ]
      },
      "execution_count": 5,
@@ -234,9 +234,9 @@
     {
      "data": {
       "text/plain": [
-       "[('tagger', <spacy.pipeline.pipes.Tagger at 0x10faa3f98>),\n",
-       " ('parser', <spacy.pipeline.pipes.DependencyParser at 0x10fc417c8>),\n",
-       " ('entity_ruler', <spacy.pipeline.entityruler.EntityRuler at 0x10f9b5c88>)]"
+       "[('tagger', <spacy.pipeline.pipes.Tagger at 0x7f9761a01ad0>),\n",
+       " ('parser', <spacy.pipeline.pipes.DependencyParser at 0x7f975fe54830>),\n",
+       " ('entity_ruler', <spacy.pipeline.entityruler.EntityRuler at 0x7f975fe5c510>)]"
       ]
      },
      "execution_count": 10,
@@ -285,13 +285,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -324,28 +317,6 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# item_data = [\n",
-    "#     ConTextItem(\"no evidence of\", category=\"DEFINITE_NEGATED_EXISTENCE\", rule=\"forward\"),\n",
-    "#     ConTextItem(\"rule out\", category=\"INDICATION\", rule=\"forward\"),\n",
-    "#     ConTextItem(\"Past Medical History\", category=\"HISTORICAL\", rule=\"forward\")\n",
-    "# ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# context.add(item_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -357,7 +328,7 @@
        " 'POSSIBLE_EXISTENCE'}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,9 +355,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('tagger', <spacy.pipeline.pipes.Tagger at 0x7f9761a01ad0>),\n",
+       " ('parser', <spacy.pipeline.pipes.DependencyParser at 0x7f975fe54830>),\n",
+       " ('entity_ruler', <spacy.pipeline.entityruler.EntityRuler at 0x7f975fe5c510>),\n",
+       " ('context', <cycontext.context_component.ConTextComponent at 0x7f9762ccda50>)]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nlp.pipeline"
    ]
@@ -400,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,9 +394,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[pneumonia] is modified by [<TagObject> [no evidence of, NEGATED_EXISTENCE]]\n",
+      "\n",
+      "[pna] is modified by [<TagObject> [rule out, POSSIBLE_EXISTENCE]]\n",
+      "\n",
+      "[PE] is modified by [<TagObject> [HISTORY, HISTORICAL]]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "for doc in docs:\n",
     "    for target, modifier in doc._.context_graph.edges:\n",
@@ -428,66 +426,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cycontext import viz\n",
+    "from medspacy.visualization import visualize_dep, visualize_ent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "colors = {\"NEGATED_EXISTENCE\": \"#34b1eb\",\n",
     "                          \"POSSIBLE_EXISTENCE\": \"yellow\",\n",
-    "                           \"HISTORICAL\": \"#ddb8f5\",\n",
+    "                          \"HISTORICAL\": \"#ddb8f5\",\n",
     "                          \"CONDITION\": \"orange\"}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">There is \n",
+       "<mark class=\"entity\" style=\"background: #34b1eb; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    no evidence of\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">NEGATED_EXISTENCE</span>\n",
+       "</mark>\n",
+       " \n",
+       "<mark class=\"entity\" style=\"background: orange; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    pneumonia\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">CONDITION</span>\n",
+       "</mark>\n",
+       ".</div></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "viz.visualize_ent(docs[0], \n",
-    "                  colors=colors\n",
-    "                 )"
+    "visualize_ent(docs[0], colors=colors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">\n",
+       "<mark class=\"entity\" style=\"background: yellow; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    rule out\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">POSSIBLE_EXISTENCE</span>\n",
+       "</mark>\n",
+       " \n",
+       "<mark class=\"entity\" style=\"background: orange; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    pna\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">CONDITION</span>\n",
+       "</mark>\n",
+       "</div></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "viz.visualize_ent(docs[1], \n",
-    "                  colors=colors\n",
-    "                 )"
+    "visualize_ent(docs[1], colors=colors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">\n",
+       "<mark class=\"entity\" style=\"background: #ddb8f5; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    HISTORY\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">HISTORICAL</span>\n",
+       "</mark>\n",
+       " OF \n",
+       "<mark class=\"entity\" style=\"background: orange; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    PE\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">CONDITION</span>\n",
+       "</mark>\n",
+       ".</div></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "from cycontext import viz\n",
-    "viz.visualize_ent(docs[2], \n",
-    "                  colors=colors,\n",
-    "                 )"
+    "visualize_ent(docs[2], colors=colors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" xml:lang=\"en\" id=\"a4a849b618cd4d3eb814132c39504fbc-0\" class=\"displacy\" width=\"750\" height=\"224.5\" direction=\"ltr\" style=\"max-width: none; height: 224.5px; color: #000000; background: #ffffff; font-family: Arial; direction: ltr\">\n",
+       "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"134.5\">\n",
+       "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"50\">HISTORY</tspan>\n",
+       "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"50\"></tspan>\n",
+       "</text>\n",
+       "\n",
+       "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"134.5\">\n",
+       "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"225\">OF</tspan>\n",
+       "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"225\"></tspan>\n",
+       "</text>\n",
+       "\n",
+       "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"134.5\">\n",
+       "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"400\">PE</tspan>\n",
+       "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"400\">CONDITION</tspan>\n",
+       "</text>\n",
+       "\n",
+       "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"134.5\">\n",
+       "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"575\">.</tspan>\n",
+       "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"575\"></tspan>\n",
+       "</text>\n",
+       "\n",
+       "<g class=\"displacy-arrow\">\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-a4a849b618cd4d3eb814132c39504fbc-0-0\" stroke-width=\"2px\" d=\"M70,89.5 C70,2.0 400.0,2.0 400.0,89.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
+       "        <textPath xlink:href=\"#arrow-a4a849b618cd4d3eb814132c39504fbc-0-0\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">HISTORICAL</textPath>\n",
+       "    </text>\n",
+       "    <path class=\"displacy-arrowhead\" d=\"M400.0,91.5 L408.0,79.5 392.0,79.5\" fill=\"currentColor\"/>\n",
+       "</g>\n",
+       "</svg></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "viz.visualize_dep(docs[2])"
+    "visualize_dep(docs[2])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -506,7 +608,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
