--- a/notebooks/01_spacy_pipeline.ipynb
+++ b/notebooks/01_spacy_pipeline.ipynb
@@ -131,8 +131,8 @@
     {
      "data": {
       "text/plain": [
-       "[('tagger', <spacy.pipeline.pipes.Tagger at 0x7f9761a01ad0>),\n",
-       " ('parser', <spacy.pipeline.pipes.DependencyParser at 0x7f975fe54830>)]"
+       "[('tagger', <spacy.pipeline.pipes.Tagger at 0x12f18a550>),\n",
+       " ('parser', <spacy.pipeline.pipes.DependencyParser at 0x121edd050>)]"
       ]
      },
      "execution_count": 5,
@@ -234,9 +234,9 @@
     {
      "data": {
       "text/plain": [
-       "[('tagger', <spacy.pipeline.pipes.Tagger at 0x7f9761a01ad0>),\n",
-       " ('parser', <spacy.pipeline.pipes.DependencyParser at 0x7f975fe54830>),\n",
-       " ('entity_ruler', <spacy.pipeline.entityruler.EntityRuler at 0x7f975fe5c510>)]"
+       "[('tagger', <spacy.pipeline.pipes.Tagger at 0x12f18a550>),\n",
+       " ('parser', <spacy.pipeline.pipes.DependencyParser at 0x121edd050>),\n",
+       " ('entity_ruler', <spacy.pipeline.entityruler.EntityRuler at 0x12162b890>)]"
       ]
      },
      "execution_count": 10,
@@ -361,10 +361,10 @@
     {
      "data": {
       "text/plain": [
-       "[('tagger', <spacy.pipeline.pipes.Tagger at 0x7f9761a01ad0>),\n",
-       " ('parser', <spacy.pipeline.pipes.DependencyParser at 0x7f975fe54830>),\n",
-       " ('entity_ruler', <spacy.pipeline.entityruler.EntityRuler at 0x7f975fe5c510>),\n",
-       " ('context', <cycontext.context_component.ConTextComponent at 0x7f9762ccda50>)]"
+       "[('tagger', <spacy.pipeline.pipes.Tagger at 0x12f18a550>),\n",
+       " ('parser', <spacy.pipeline.pipes.DependencyParser at 0x121edd050>),\n",
+       " ('entity_ruler', <spacy.pipeline.entityruler.EntityRuler at 0x12162b890>),\n",
+       " ('context', <cycontext.context_component.ConTextComponent at 0x13043a090>)]"
       ]
      },
      "execution_count": 16,
@@ -549,7 +549,7 @@
     {
      "data": {
       "text/html": [
-       "<span class=\"tex2jax_ignore\"><svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" xml:lang=\"en\" id=\"a4a849b618cd4d3eb814132c39504fbc-0\" class=\"displacy\" width=\"750\" height=\"224.5\" direction=\"ltr\" style=\"max-width: none; height: 224.5px; color: #000000; background: #ffffff; font-family: Arial; direction: ltr\">\n",
+       "<span class=\"tex2jax_ignore\"><svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" xml:lang=\"en\" id=\"103a38d227b84d89a854a5096ed8a32c-0\" class=\"displacy\" width=\"750\" height=\"224.5\" direction=\"ltr\" style=\"max-width: none; height: 224.5px; color: #000000; background: #ffffff; font-family: Arial; direction: ltr\">\n",
        "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"134.5\">\n",
        "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"50\">HISTORY</tspan>\n",
        "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"50\"></tspan>\n",
@@ -571,9 +571,9 @@
        "</text>\n",
        "\n",
        "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-a4a849b618cd4d3eb814132c39504fbc-0-0\" stroke-width=\"2px\" d=\"M70,89.5 C70,2.0 400.0,2.0 400.0,89.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-103a38d227b84d89a854a5096ed8a32c-0-0\" stroke-width=\"2px\" d=\"M70,89.5 C70,2.0 400.0,2.0 400.0,89.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
        "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-a4a849b618cd4d3eb814132c39504fbc-0-0\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">HISTORICAL</textPath>\n",
+       "        <textPath xlink:href=\"#arrow-103a38d227b84d89a854a5096ed8a32c-0-0\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">HISTORICAL</textPath>\n",
        "    </text>\n",
        "    <path class=\"displacy-arrowhead\" d=\"M400.0,91.5 L408.0,79.5 392.0,79.5\" fill=\"currentColor\"/>\n",
        "</g>\n",
@@ -612,5 +612,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
